--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="card_backgraund">#CDE0C2</color>
 
 
+    <color name="orange_warning">#F57C00</color>
 
 
     <color name="teal_200">#03DAC5</color>
