--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,5 +10,9 @@
         <item name="android:textColor">#222222</item>
         <item name="android:textColorHint">#777777</item>
     </style>
+    <style name="ImageRounded">
+        <item name="cornerSize">16dp</item>
+    </style>
+
 
 </resources>
